--- a/index.css
+++ b/index.css
@@ -317,3 +317,157 @@
     color: #707070;
     letter-spacing: .4px;
 }
+
+/*courses */
+
+/* grids section */
+.course .course_bg {
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+  }
+  
+  .course .course-item h5 {
+    font-size: 20px;
+    line-height: 30px;
+    color: var(--heading-color);
+    font-weight: 600;
+    margin-bottom: 6px;
+  }
+  .course .item {
+    background-color: white;
+    padding: 30px;
+    border-radius: 8px;
+    }
+  
+  .course .icon {
+    margin-right: 1em;
+    color: #0D379F;
+  }
+  
+  .course .icon i {
+    background: var(--primary-color);
+    color: var(--primary-color);
+    font-size: 28px;
+    background: rgb(13 54 159 / 9%);
+    width: 65px;
+    height: 66px;
+    line-height: 65px;
+    border-radius: 50%;
+    text-align: center;
+  }
+  
+ /* NUMBER */
+ .container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.number{
+    /* background-color: #000; */
+    padding: 100px 0;
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+   
+}
+.number__content{
+    /* width: 100%; */
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 46px;
+    font-weight: 600;
+    color: var(--heading-color);
+    text-transform: uppercase;
+}
+.number__item{
+    width: 25%;
+}
+
+
+.number__item p:first-of-type{
+    font-size: 60px;
+    font-weight: 300;
+}
+.number__item p:last-of-type{
+    font-size: 20px;
+    color: #888888;
+}
+
+.number_title{
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 30px 0;
+    
+}
+
+.number_title h2{
+    margin-bottom: 3rem !important;
+}
+
+.number_title p{
+    color: #707070;
+}
+
+.counter{
+    border-right: 10px solid var(--border-color-light);
+}
+
+/* HomePage Testimonials */
+.sub-test q::before {
+    font-size: 50px;
+    color: var(--secondary-color);
+    font-family: initial;
+    line-height: .8;
+    padding-top: 8px;
+    display: inline-block;
+    content: '';
+  }
+  
+  .testimonials_grid span.fa {
+    font-size: 22px;
+    color: #FF6F65;
+    line-height: .8;
+    display: inline-block;
+  }
+  
+  .feedback-cont .testimonials_grid {
+    background: #FEFEFE;
+    border-radius: 4px;
+    box-shadow: 0 20px 62px;
+    padding: 2rem;
+  }
+
+  .feedback-cont .testi-img-res img {
+    border-radius: 50%;
+  }
+  
+  .feedback-cont p.sub-test span {
+    color: #e2e2e2;
+    font-size: 28px;
+    font-style: italic;
+    margin-right: 10px;
+  }
+  
+  .feedback-cont .testi_grid p {
+    font-size: 13px;
+    color: var(--font-color);
+  }
+  
+  .feedback-cont .sub-author-con {
+    grid-template-columns: .3fr 1fr;
+    align-items: center;
+    grid-gap: 5px;
+    margin-top: 1.5em;
+  }
+  
+  .feedback-cont .testi_grid h5 {
+    font-weight: 600;
+    line-height: 16px;
+  }
