--- a/Contact_Page/css/contact.css
+++ b/Contact_Page/css/contact.css
@@ -135,7 +135,7 @@
   body.dark .header_top {
     background-color: #4867b0;
   }
-  body.dark .header_nav .navbar-brand span {
+  body.dark .navbar-brand span {
     color: white;
   }
   /* NAV  */
