--- a/index.css
+++ b/index.css
@@ -199,7 +199,7 @@ body.dark .header_top{
 body.dark .navbar .nav-link{
   color: #fff;
 }
-body.dark .header_nav .navbar-brand span {
+body.dark .navbar-brand span {
   color: white;
 }
 body.dark .navbar-collapse form .form-control{
